--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.0.1",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-autoplay": "^8.6.0",
