--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@react-email/render": "^1.1.3",
     "@react-email/tailwind": "^1.0.5",
     "@types/pg": "^8.15.4",
+    "@types/react-csv": "^1.1.10",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,6 +69,7 @@
     "nodemailer": "^7.0.4",
     "pg": "^8.16.3",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
